--- a/assets/css/artsyle.css
+++ b/assets/css/artsyle.css
@@ -3,8 +3,21 @@
     padding: 0;
     font-family: Arial, sans-serif;
     background: url("../images/colorful-2174045_1920.png");
-    background-size:auto
+    background-size: auto;
+    background-attachment: fixed;
+    /* Prevent background tiling */
 }
+
+
+
+.bio {
+    background-image: url("../images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg");
+
+    background-position: right bottom;
+    background-repeat: no repeat;
+
+}
+
 
 header {
     background-color: #333;
@@ -74,6 +87,8 @@ nav a:hover {
     top: 100px;
 }
 
+
+
 .text-overlay h2 {
     font-size: 2em;
     margin-bottom: 10px;
@@ -135,3 +150,40 @@ footer {
     color: #333;
 }
 
+/*---------------------------------------------media queries*/
+
+@media screen and (max-width: 768px) {
+    body {
+        background-size: cover;
+    }
+
+    .text-overlay {
+        top: 50%;
+    }
+
+    .landing-image {
+        height: 300px;
+    }
+
+    @media only screen and (max-width: 600px) {
+
+        /* Adjust styles for small screens (e.g., smartphones) */
+        .hero {
+            padding-top: 80px;
+            /* Add some padding to push the content down */
+        }
+
+        .text-overlay {
+            margin-top: 40px;
+            /* Add margin to the top of the text overlay */
+        }
+
+        /* Add more styles as needed for smaller screens */
+    }
+
+    @media screen and (max-width: 480px) {
+        .text-overlay {
+            top: 70%;
+        }
+    }
+}
