--- a/assets/css/artsyle.css
+++ b/assets/css/artsyle.css
@@ -1,16 +1,10 @@
-﻿body {
+body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
     background: url("../images/colorful-2174045_1920.png");
-    background-size: auto;
-    background-position: right bottom;
-    background-repeat: no-repeat;
+    background-size:auto
 }
-
-
-
-
 
 header {
     background-color: #333;
@@ -47,10 +41,10 @@ nav a {
     text-decoration: none;
 }
 
-    nav a:hover {
-        background-color: #ddd;
-        color: #333;
-    }
+nav a:hover {
+    background-color: #ddd;
+    color: #333;
+}
 
 .hero {
     position: relative;
@@ -80,27 +74,27 @@ nav a {
     top: 100px;
 }
 
-    .text-overlay h2 {
-        font-size: 2em;
-        margin-bottom: 10px;
-    }
+.text-overlay h2 {
+    font-size: 2em;
+    margin-bottom: 10px;
+}
 
-    .text-overlay p {
-        font-size: 1.2em;
-        margin-bottom: 20px;
-    }
+.text-overlay p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+}
 
-    .text-overlay a {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: #333;
-        color: #fff;
-        text-decoration: none;
-        border-radius: 5px;
-    }
+.text-overlay a {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+}
 
 footer {
-    position: fixed;
+    position:fixed;
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -118,15 +112,15 @@ footer {
     margin-top: 10px;
 }
 
-    .social-networks li {
-        margin: 0 10px;
-    }
+.social-networks li {
+    margin: 0 10px;
+}
 
-    .social-networks a {
-        color: #fff;
-        text-decoration: none;
-        font-size: 1.5em;
-    }
+.social-networks a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.5em;
+}
 
 .cta-button {
     border-radius: 5px;
@@ -136,7 +130,8 @@ footer {
     z-index: 100;
 }
 
-    .cta-button:hover {
-        background-color: #ddd;
-        color: #333;
-    }
+.cta-button:hover {
+    background-color: #ddd;
+    color: #333;
+}
+
