--- a/assets/css/artsyle.css
+++ b/assets/css/artsyle.css
@@ -7,6 +7,32 @@ body {
   
 }
 
+label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+button {
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
+.form-box{
+    position:fixed;
+    left:900px;
+    width:700px;
+    height:190px;
+    padding-bottom:100px;
+
+    
+
+}
+
 header {
     background-color: #333;
     color: #fff;
