--- a/assets/css/artsyle.css
+++ b/assets/css/artsyle.css
@@ -15,6 +15,32 @@ header {
     align-items: center;
 }
 
+label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+button {
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
+.form-box{
+    position:fixed;
+    left:900px;
+    width:700px;
+    height:190px;
+    padding-bottom:100px;
+
+    
+
+}
+
 .logo {
     flex-grow: 1;
 }
@@ -355,5 +381,4 @@ footer {
         text-align: center;
         /* Center the text in the footer */
     }
-
 }
